--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "30 mathematically rigid PyTorch deep learning enhancements based on the Nexus Resonance Codex."
 readme = "README.md"
 requires-python = ">=3.10"
-license = "NRC-L-2.0"
+license = {file = "LICENSE.md"}
 keywords = ["pytorch", "deep-learning", "golden-ratio", "resonance", "machine-learning", "transformers"]
 authors = [
     { name = "James Trageser", email = "Nexus-Resonance-Codex@gmail.com" },
