fix: Add [tool.hatch.metadata] allow-direct-references = true for git URL deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,9 @@ dev = [
 [tool.hatch.version]
 path = "src/nrc_ai/__about__.py"
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [tool.ruff]
 line-length = 100
 target-version = "py310"
