--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,13 @@ dependencies = [
     "pyyaml>=6.0",
     # The nrc core math library is required. Locally, this can be installed via 'pip install -e ../NRC'
     # In production, it would be a proper PIP dependency or git URL: "nrc @ git+https://github.com/Nexus-Resonance-Codex/NRC.git"
-    "nrc @ git+https://github.com/Nexus-Resonance-Codex/NRC.git",
+    "nrc",
 ]
 
 [project.urls]
-Documentation = "https://github.com/Nexus-Resonance-Codex/ai-enhancements"
-Issues = "https://github.com/Nexus-Resonance-Codex/ai-enhancements/issues"
-Source = "https://github.com/Nexus-Resonance-Codex/ai-enhancements"
+Documentation = "https://github.com/Nexus-Resonance-Codex/Ai-Enhancements"
+Issues = "https://github.com/Nexus-Resonance-Codex/Ai-Enhancements/issues"
+Source = "https://github.com/Nexus-Resonance-Codex/Ai-Enhancements"
 
 [project.optional-dependencies]
 dev = [
