--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "B", "W", "I"]
+extend-ignore = ["E501"]
 exclude = ["tests", "examples"]
 
 [tool.mypy]
